# mimetic

./: CMakeLists.txt
cmake/: cmake_config.h.in  cmake_uninstall.cmake.in  mimetic.pc.in  mimeticConfig.cmake.in
